--- a/localization/english/br_countries_l_english.yml
+++ b/localization/english/br_countries_l_english.yml
@@ -37,9 +37,9 @@
  br_kuwait: "Kuwait"
  br_kuwait_ADJ: "Kuwaiti"
  br_genonese_africa_company: "Genonese Africa Company"
- br_genonese_africa_company_ADJ: "Africa Company"
+ br_genonese_africa_company_ADJ: "Genonese"
  br_venice_africa_company: "Venice Africa Company"
- br_venice_africa_company_ADJ: "Africa Company"
+ br_venice_africa_company_ADJ: "Venetian"
  br_tartaria: "Tartaria"
  br_tartaria_ADJ: "Tatar"
  br_silesia: "Silesia"
@@ -82,8 +82,8 @@
  br_dalmatia_ADJ: "Dalmatian"
  br_ragusta: "Ragusta"
  br_ragusta_ADJ: "Ragustan"
- br_albania: "Illyrikon"
- br_albania_ADJ: "Illyrikon"
+ br_albania: "Dyrrhachion"
+ br_albania_ADJ: "Dyrrhachion"
  br_bulgaria: "Bulgaria"
  br_bulgaria_ADJ: "Bulgarian"
  br_syria: "Syria"
@@ -94,6 +94,14 @@
  br_alania_ADJ: "Alan"
  br_dagestan: "Dagestan"
  br_dagestan_ADJ: "Dagestani"
+ HUM: "Zachlumia"
+ HUM_ADJ: "Zachlumia"
+ SER2: "Naissos"
+ SER2_ADJ: "Naissos"
+ br_vidin: "Vidin"
+ br_vidin_ADJ: "Vidin"
+ br_blacksea_colonies: "Blacksea Colonies"
+ br_blacksea_colonies_ADJ: "Genonese"
 
  br_klein_venedig: "Klein-Venedig"
  br_klein_venedig_ADJ: "Welser"
