--- a/localization/english/br_cultures_l_english.yml
+++ b/localization/english/br_cultures_l_english.yml
@@ -1,25 +1,26 @@
 ﻿l_english:
-#Romaioi Mod Cultures
+#BR Mod Cultures
 #New 
  cappadocian: "Kappadokikí"
- anatolian: "Anatolikós" #formerly Anatolikós
+ anatolian: "Anatolikós"
  pontic: "Pontíoi"
  african: "Afrikanós"
  aegyptian: "Aegýptian"
- apoikoi: "Apoikoi"
  syriac: "Syriac"
  coptic: "Coptic"
-# sicilian: "Sicilian"
  varangian: "Varangian"
- andalusian: "Andalusian"
- elysian: "Elysian"
- vinlander: "Vinlander"
+ andalusian: "Andalusi"
  latinoi: "Latínoi"
  mughal: "Mughal"
  formosan: "Formosan"
  taino: "Taino"
+ mozarab: "Mozarab"
+ silesian: "Silesian"
 
  #Colonial Cultures todo come up with unique names.
+ elysian: "Elysian"
+ vinlander: "Vinlander"
+ apoikoi: "Apoikoi"
  colonial_french: "Colonial-French"
  colonial_italian: "Colonial-Italian"
  colonial_german: "Colonial-German"
@@ -33,14 +34,15 @@
  afro_french: "Afro-French"
  afro_italian: "Afro-Italian"
  afro_andalusian: "Afro-Andalusi"
- afro_arab: "Zanj"
+ afro_arab: "Afro-Arab" #Zanj?
+ afro_hellenic: "Afro-Hellene"
+ afro_dutch: "Afro-Dutch"
 
+ #Jewish Cultures
+ romaniote: "Romaniote" #greco-roman jews in the ERE.
+ mizrahi: "Musta'Arabi" #Jews in the Arab Persian World.
 
 #Renamed Currently all renamed cultures do not work unless they are renamed in cultures_1
  #greek:1 "Romaíoi" 
  #romanian: "Vlach"
  #sudanese: "Nubian"
- #albanian: "Illyrian"
- #maghrebi: "Maghrebi"
- #misri: "Egyptian"
- #mashriqi: "Levantine"
