--- a/localization/english/replace/countries_l_english.yml
+++ b/localization/english/replace/countries_l_english.yml
@@ -21,6 +21,8 @@
  BER_ADJ: "Gujarat"
  BOS: "Bosnia"
  BOS_ADJ: "Bosnian"
+ MON: "Dioklea"
+ MON_ADJ: "Dioklean"
  #BUK: "Khorasan"
  #BUK_ADJ: "Khorasani"
  BYZ: "Basileía Romaíon"
@@ -130,6 +132,8 @@
  WAL_ADJ: "Wallachian"
  WES: "Rhineland"
  WES_ADJ: "Rhiniesh"
+ MEI: "Meissen"
+ MEI_ADJ: "Meissen"
  WUR: "Swabia"
  WUR_ADJ: "Swabian"
  JAB: "An-Nufud"
