--- a/localization/english/replace/hub_names_l_english.yml
+++ b/localization/english/replace/hub_names_l_english.yml
@@ -598,7 +598,7 @@
  HUB_NAME_STATE_DALMATIA_farm: "Tenin"
  HUB_NAME_STATE_DALMATIA_wood: "Sebenico"
  HUB_NAME_STATE_BOSNIA_city: "Vrhbosna"
- HUB_NAME_STATE_BOSNIA_mine: "Martari"
+ HUB_NAME_STATE_BOSNIA_mine: "Zachlumia"
  HUB_NAME_STATE_BOSNIA_farm: "Castra"
  HUB_NAME_STATE_BOSNIA_wood: "Visoki"
  HUB_NAME_STATE_NORTHERN_SERBIA_city: "Belgrade"
@@ -609,7 +609,7 @@
  HUB_NAME_STATE_SOUTHERN_SERBIA_mine: "Leskovats"
  HUB_NAME_STATE_SOUTHERN_SERBIA_farm: "Ferizai"
  HUB_NAME_STATE_SOUTHERN_SERBIA_wood: "Besiane"
- HUB_NAME_STATE_MONTENEGRO_city: "Pontnkoritsa"
+ HUB_NAME_STATE_MONTENEGRO_city: "Dioklea"
  HUB_NAME_STATE_MONTENEGRO_port: "Ragusta"
  HUB_NAME_STATE_MONTENEGRO_mine: "Moikovats"
  HUB_NAME_STATE_MONTENEGRO_farm: "Berane"
@@ -677,7 +677,7 @@
  HUB_NAME_STATE_BULGARIA_port: "Mesembria"
  HUB_NAME_STATE_BULGARIA_mine: "Tarnovo"
  HUB_NAME_STATE_BULGARIA_farm: "Shumen"
- HUB_NAME_STATE_BULGARIA_wood: "Pleven"
+ HUB_NAME_STATE_BULGARIA_wood: "Nicopolis"
 
  HUB_NAME_STATE_WALLACHIA_city: "Bucharest"
  HUB_NAME_STATE_WALLACHIA_mine: "Craiova"
@@ -778,94 +778,94 @@
  HUB_NAME_STATE_CHERNIHIV_wood: "Nizhyn"
  HUB_NAME_STATE_TAURIDA_city: "Aleksandrovsk"
  HUB_NAME_STATE_TAURIDA_mine: "Luhansk"
- HUB_NAME_STATE_TAURIDA_port: "Mariupol"
+ HUB_NAME_STATE_TAURIDA_port: "Maurocastro"
  HUB_NAME_STATE_TAURIDA_farm: "Kakhovka"
  HUB_NAME_STATE_TAURIDA_wood: "Bakhmut"
 
  #Crimea
- HUB_NAME_STATE_CRIMEA_city: "Kaffa" #14-11-2023
- HUB_NAME_STATE_CRIMEA_port: "Khersónisos" #14-11-2023
- HUB_NAME_STATE_CRIMEA_mine: "Kerch" #14-11-2023
- HUB_NAME_STATE_CRIMEA_farm: "Yevpatoria" #14-11-2023
- HUB_NAME_STATE_CRIMEA_wood: "Feodosia" #14-11-2023
+ HUB_NAME_STATE_CRIMEA_city: "Theodoisa" 
+ HUB_NAME_STATE_CRIMEA_port: "Khersónisos" 
+ HUB_NAME_STATE_CRIMEA_mine: "Vosporo" 
+ HUB_NAME_STATE_CRIMEA_farm: "Kalamita" 
+ HUB_NAME_STATE_CRIMEA_wood: "Feodosia" 
 
  #Moldova
- HUB_NAME_STATE_BESSARABIA_city: "Chişinău" #14-11-2023
- HUB_NAME_STATE_BESSARABIA_port: "Akkerman" #14-11-2023
- HUB_NAME_STATE_BESSARABIA_mine: "Balti" #14-11-2023
- HUB_NAME_STATE_BESSARABIA_farm: "Ishmael" #14-11-2023
- HUB_NAME_STATE_BESSARABIA_wood: "Beltsy" #14-11-2023
+ HUB_NAME_STATE_BESSARABIA_city: "Chişinău" 
+ HUB_NAME_STATE_BESSARABIA_port: "Akkerman" 
+ HUB_NAME_STATE_BESSARABIA_mine: "Balti" 
+ HUB_NAME_STATE_BESSARABIA_farm: "Ishmael" 
+ HUB_NAME_STATE_BESSARABIA_wood: "Beltsy" 
 
  #Russia
- HUB_NAME_STATE_INGRIA_city: "St Petersburg" #14-11-2023
- HUB_NAME_STATE_INGRIA_port: "Kronstadt" #14-11-2023
- HUB_NAME_STATE_INGRIA_mine: "Shlisselburg" #14-11-2023
- HUB_NAME_STATE_INGRIA_farm: "Yamburg" #14-11-2023
- HUB_NAME_STATE_INGRIA_wood: "Luga" #14-11-2023
- HUB_NAME_STATE_KURSK_city: "Kursk" #14-11-2023
- HUB_NAME_STATE_KURSK_mine: "Voronezh" #14-11-2023
- HUB_NAME_STATE_KURSK_farm: "Belgorod" #14-11-2023
- HUB_NAME_STATE_KURSK_wood: "Novokhopersk" #14-11-2023
- HUB_NAME_STATE_SMOLENSK_city: "Smolensk" #14-11-2023
- HUB_NAME_STATE_SMOLENSK_mine: "Dorogobuzh" #14-11-2023
- HUB_NAME_STATE_SMOLENSK_farm: "Roslavl" #14-11-2023
- HUB_NAME_STATE_SMOLENSK_wood: "Vyazma" #14-11-2023
- HUB_NAME_STATE_NOVGOROD_city: "Novgorod" #14-11-2023
- HUB_NAME_STATE_NOVGOROD_mine: "Cherepovets" #14-11-2023
- HUB_NAME_STATE_NOVGOROD_farm: "Staraya Russa" #14-11-2023
- HUB_NAME_STATE_NOVGOROD_wood: "Borovichi" #14-11-2023
- HUB_NAME_STATE_EAST_KARELIA_city: "Petrozavodsk" #14-11-2023
- HUB_NAME_STATE_EAST_KARELIA_port: "Soroka" #14-11-2023
- HUB_NAME_STATE_EAST_KARELIA_mine: "Kondopoga" #14-11-2023
- HUB_NAME_STATE_EAST_KARELIA_farm: "Kem" #14-11-2023
- HUB_NAME_STATE_EAST_KARELIA_wood: "Povenets" #14-11-2023
- HUB_NAME_STATE_ARKHANGELSK_city: "Onega" #14-11-2023
- HUB_NAME_STATE_ARKHANGELSK_port: "Arkhangelsk" #14-11-2023
- HUB_NAME_STATE_ARKHANGELSK_mine: "Plesetsk" #14-11-2023
- HUB_NAME_STATE_ARKHANGELSK_farm: "Kholmogory" #14-11-2023
- HUB_NAME_STATE_ARKHANGELSK_wood: "Bereznik" #14-11-2023
- HUB_NAME_STATE_TVER_city: "Tver" #14-11-2023
- HUB_NAME_STATE_TVER_mine: "Vyshny Volochyok" #14-11-2023
- HUB_NAME_STATE_TVER_farm: "Rzhev" #14-11-2023
- HUB_NAME_STATE_TVER_wood: "Ostashkov" #14-11-2023
- HUB_NAME_STATE_GALICH_city: "Vologda" #14-11-2023
- HUB_NAME_STATE_GALICH_mine: "Totma" #14-11-2023
- HUB_NAME_STATE_GALICH_farm: "Ust-Sysolsk" #14-11-2023
- HUB_NAME_STATE_GALICH_wood: "Velikiy Ustyug" #14-11-2023
- HUB_NAME_STATE_MOSCOW_city: "Moscow" #14-11-2023
- HUB_NAME_STATE_MOSCOW_mine: "Sergiev Posad" #14-11-2023
- HUB_NAME_STATE_MOSCOW_farm: "Kolomna" #14-11-2023
- HUB_NAME_STATE_MOSCOW_wood: "Serpukhov" #14-11-2023
- HUB_NAME_STATE_KAZAN_city: "Kazan" #14-11-2023
- HUB_NAME_STATE_KAZAN_mine: "Almetyevsk" #14-11-2023
- HUB_NAME_STATE_KAZAN_farm: "Chistopol" #14-11-2023
- HUB_NAME_STATE_KAZAN_wood: "Yelabuga" #14-11-2023
- HUB_NAME_STATE_TARTARIA_city: "Sarai" #14-11-2023
- HUB_NAME_STATE_TARTARIA_mine: "Novouzensk" #14-11-2023
- HUB_NAME_STATE_TARTARIA_farm: "Simbirsk" #14-11-2023
- HUB_NAME_STATE_TARTARIA_wood: "Balashov" #14-11-2023
- HUB_NAME_STATE_ROSTOV_city: "Rostov-on-Don" #14-11-2023
- HUB_NAME_STATE_ROSTOV_port: "Taganrog" #14-11-2023
- HUB_NAME_STATE_ROSTOV_mine: "Alexandro-Grushevskaya" #14-11-2023
- HUB_NAME_STATE_ROSTOV_farm: "Ust-Medveditskaya" #14-11-2023
- HUB_NAME_STATE_ROSTOV_wood: "Uryupinskaya" #14-11-2023
- HUB_NAME_STATE_ASTRAKHAN_city: "Astrakhan" #14-11-2023
- HUB_NAME_STATE_ASTRAKHAN_mine: "Tsaritsyn" #14-11-2023
- HUB_NAME_STATE_ASTRAKHAN_farm: "Tsarev" #14-11-2023
- HUB_NAME_STATE_ASTRAKHAN_wood: "Enotaevsk" #14-11-2023
- HUB_NAME_STATE_SAMARA_city: "Samara" #14-11-2023
- HUB_NAME_STATE_SAMARA_mine: "Buguruslan" #14-11-2023
- HUB_NAME_STATE_SAMARA_farm: "Orenburg" #14-11-2023
- HUB_NAME_STATE_SAMARA_wood: "Nikolaevsk" #14-11-2023
- HUB_NAME_STATE_PERM_city: "Perm" #14-11-2023
- HUB_NAME_STATE_PERM_mine: "Solikamsk" #14-11-2023
- HUB_NAME_STATE_PERM_farm: "Kungur" #14-11-2023
- HUB_NAME_STATE_PERM_wood: "Krasnoufimsk" #14-11-2023
- HUB_NAME_STATE_NENETSIA_city: "Naryan-Mar" #14-11-2023
- HUB_NAME_STATE_NENETSIA_port: "Mezen" #14-11-2023
- HUB_NAME_STATE_NENETSIA_mine: "Vorkuta" #14-11-2023
- HUB_NAME_STATE_NENETSIA_farm: "Pinega" #14-11-2023
- HUB_NAME_STATE_NENETSIA_wood: "Dorogorskoye" #14-11-2023
+ HUB_NAME_STATE_INGRIA_city: "St Petersburg" 
+ HUB_NAME_STATE_INGRIA_port: "Kronstadt" 
+ HUB_NAME_STATE_INGRIA_mine: "Shlisselburg" 
+ HUB_NAME_STATE_INGRIA_farm: "Yamburg" 
+ HUB_NAME_STATE_INGRIA_wood: "Luga" 
+ HUB_NAME_STATE_KURSK_city: "Kursk" 
+ HUB_NAME_STATE_KURSK_mine: "Voronezh" 
+ HUB_NAME_STATE_KURSK_farm: "Belgorod" 
+ HUB_NAME_STATE_KURSK_wood: "Novokhopersk" 
+ HUB_NAME_STATE_SMOLENSK_city: "Smolensk" 
+ HUB_NAME_STATE_SMOLENSK_mine: "Dorogobuzh" 
+ HUB_NAME_STATE_SMOLENSK_farm: "Roslavl" 
+ HUB_NAME_STATE_SMOLENSK_wood: "Vyazma" 
+ HUB_NAME_STATE_NOVGOROD_city: "Novgorod" 
+ HUB_NAME_STATE_NOVGOROD_mine: "Cherepovets" 
+ HUB_NAME_STATE_NOVGOROD_farm: "Staraya Russa" 
+ HUB_NAME_STATE_NOVGOROD_wood: "Borovichi" 
+ HUB_NAME_STATE_EAST_KARELIA_city: "Petrozavodsk" 
+ HUB_NAME_STATE_EAST_KARELIA_port: "Soroka" 
+ HUB_NAME_STATE_EAST_KARELIA_mine: "Kondopoga" 
+ HUB_NAME_STATE_EAST_KARELIA_farm: "Kem" 
+ HUB_NAME_STATE_EAST_KARELIA_wood: "Povenets" 
+ HUB_NAME_STATE_ARKHANGELSK_city: "Onega" 
+ HUB_NAME_STATE_ARKHANGELSK_port: "Arkhangelsk" 
+ HUB_NAME_STATE_ARKHANGELSK_mine: "Plesetsk" 
+ HUB_NAME_STATE_ARKHANGELSK_farm: "Kholmogory" 
+ HUB_NAME_STATE_ARKHANGELSK_wood: "Bereznik" 
+ HUB_NAME_STATE_TVER_city: "Tver" 
+ HUB_NAME_STATE_TVER_mine: "Vyshny Volochyok" 
+ HUB_NAME_STATE_TVER_farm: "Rzhev" 
+ HUB_NAME_STATE_TVER_wood: "Ostashkov" 
+ HUB_NAME_STATE_GALICH_city: "Vologda" 
+ HUB_NAME_STATE_GALICH_mine: "Totma" 
+ HUB_NAME_STATE_GALICH_farm: "Ust-Sysolsk" 
+ HUB_NAME_STATE_GALICH_wood: "Velikiy Ustyug" 
+ HUB_NAME_STATE_MOSCOW_city: "Moscow" 
+ HUB_NAME_STATE_MOSCOW_mine: "Sergiev Posad" 
+ HUB_NAME_STATE_MOSCOW_farm: "Kolomna" 
+ HUB_NAME_STATE_MOSCOW_wood: "Serpukhov" 
+ HUB_NAME_STATE_KAZAN_city: "Kazan" 
+ HUB_NAME_STATE_KAZAN_mine: "Almetyevsk" 
+ HUB_NAME_STATE_KAZAN_farm: "Chistopol" 
+ HUB_NAME_STATE_KAZAN_wood: "Yelabuga" 
+ HUB_NAME_STATE_TARTARIA_city: "Sarai" 
+ HUB_NAME_STATE_TARTARIA_mine: "Novouzensk" 
+ HUB_NAME_STATE_TARTARIA_farm: "Simbirsk" 
+ HUB_NAME_STATE_TARTARIA_wood: "Balashov" 
+ HUB_NAME_STATE_ROSTOV_city: "Tana" 
+ HUB_NAME_STATE_ROSTOV_port: "Vosporo" 
+ HUB_NAME_STATE_ROSTOV_mine: "Alexandro-Grushevskaya" 
+ HUB_NAME_STATE_ROSTOV_farm: "Ust-Medveditskaya" 
+ HUB_NAME_STATE_ROSTOV_wood: "Uryupinskaya" 
+ HUB_NAME_STATE_ASTRAKHAN_city: "Astrakhan" 
+ HUB_NAME_STATE_ASTRAKHAN_mine: "Tsaritsyn" 
+ HUB_NAME_STATE_ASTRAKHAN_farm: "Tsarev" 
+ HUB_NAME_STATE_ASTRAKHAN_wood: "Enotaevsk" 
+ HUB_NAME_STATE_SAMARA_city: "Samara" 
+ HUB_NAME_STATE_SAMARA_mine: "Buguruslan" 
+ HUB_NAME_STATE_SAMARA_farm: "Orenburg" 
+ HUB_NAME_STATE_SAMARA_wood: "Nikolaevsk" 
+ HUB_NAME_STATE_PERM_city: "Perm" 
+ HUB_NAME_STATE_PERM_mine: "Solikamsk" 
+ HUB_NAME_STATE_PERM_farm: "Kungur" 
+ HUB_NAME_STATE_PERM_wood: "Krasnoufimsk" 
+ HUB_NAME_STATE_NENETSIA_city: "Naryan-Mar" 
+ HUB_NAME_STATE_NENETSIA_port: "Mezen" 
+ HUB_NAME_STATE_NENETSIA_mine: "Vorkuta" 
+ HUB_NAME_STATE_NENETSIA_farm: "Pinega" 
+ HUB_NAME_STATE_NENETSIA_wood: "Dorogorskoye" 
  HUB_NAME_STATE_URAL_city: "Yekaterinburg" #13-11-2023
  HUB_NAME_STATE_URAL_mine: "Nizhny Tagil" #13-11-2023
  HUB_NAME_STATE_URAL_farm: "Shadrinsk" #13-11-2023
@@ -903,42 +903,42 @@
  HUB_NAME_STATE_SURGUT_mine: "Nizhnevartovsk" #13-11-2023
  HUB_NAME_STATE_SURGUT_farm: "Samarovo" #13-11-2023
  HUB_NAME_STATE_SURGUT_wood: "Berezov" #13-11-2023
- HUB_NAME_STATE_IRKUTSK_city: "Irkutsk" #14-11-2023
- HUB_NAME_STATE_IRKUTSK_mine: "Tulun" #14-11-2023
- HUB_NAME_STATE_IRKUTSK_farm: "Kirensk" #14-11-2023
- HUB_NAME_STATE_IRKUTSK_wood: "Nizhneudinsk" #14-11-2023
- HUB_NAME_STATE_YAKUTSK_city: "Yakutsk" #14-11-2023
- HUB_NAME_STATE_YAKUTSK_port: "Tiksi" #14-11-2023
- HUB_NAME_STATE_YAKUTSK_mine: "Aldan" #14-11-2023
- HUB_NAME_STATE_YAKUTSK_farm: "Vilyuysk" #14-11-2023
- HUB_NAME_STATE_YAKUTSK_wood: "Olekminsk" #14-11-2023
- HUB_NAME_STATE_TRANS_BAIKAL_city: "Chita" #14-11-2023
- HUB_NAME_STATE_TRANS_BAIKAL_mine: "Shkaruby" #14-11-2023
- HUB_NAME_STATE_TRANS_BAIKAL_farm: "Aksha" #14-11-2023
- HUB_NAME_STATE_TRANS_BAIKAL_wood: "Nerchinsk" #14-11-2023
- HUB_NAME_STATE_OKHOTSK_city: "Magadan" #14-11-2023
- HUB_NAME_STATE_OKHOTSK_port: "Okhotsk" #14-11-2023
- HUB_NAME_STATE_OKHOTSK_mine: "Omsukchan" #14-11-2023
- HUB_NAME_STATE_OKHOTSK_farm: "Chumikan" #14-11-2023
- HUB_NAME_STATE_OKHOTSK_wood: "Gizhiginsk" #14-11-2023
- HUB_NAME_STATE_CHUKOTKA_city: "Markovo" #14-11-2023
- HUB_NAME_STATE_CHUKOTKA_port: "Anadyr" #14-11-2023
- HUB_NAME_STATE_CHUKOTKA_mine: "Pevek" #14-11-2023
- HUB_NAME_STATE_CHUKOTKA_farm: "Naukan" #14-11-2023
- HUB_NAME_STATE_CHUKOTKA_wood: "Provideniya" #14-11-2023
- HUB_NAME_STATE_KAMCHATKA_city: "Petropavlovsk-Kamchatskiy" #14-11-2023
- HUB_NAME_STATE_KAMCHATKA_port: "Ust-Kamchatsk" #14-11-2023
- HUB_NAME_STATE_KAMCHATKA_mine: "Manily" #14-11-2023
- HUB_NAME_STATE_KAMCHATKA_farm: "Nizhnekamchatsk" #14-11-2023
- HUB_NAME_STATE_KAMCHATKA_wood: "Milkovo" #14-11-2023
- HUB_NAME_STATE_BURYATIA_city: "Verkhneudinsk" #14-11-2023
- HUB_NAME_STATE_BURYATIA_mine: "Tunka" #14-11-2023
- HUB_NAME_STATE_BURYATIA_farm: "Troitskosavsk" #14-11-2023
- HUB_NAME_STATE_BURYATIA_wood: "Barguzin" #14-11-2023
- HUB_NAME_STATE_KOLYMA_city: "Srednekolymsk" #14-11-2023
- HUB_NAME_STATE_KOLYMA_mine: "Khonuu" #14-11-2023
- HUB_NAME_STATE_KOLYMA_farm: "Zashiversk" #14-11-2023
- HUB_NAME_STATE_KOLYMA_wood: "Allakh-Yun" #14-11-2023
+ HUB_NAME_STATE_IRKUTSK_city: "Irkutsk" 
+ HUB_NAME_STATE_IRKUTSK_mine: "Tulun" 
+ HUB_NAME_STATE_IRKUTSK_farm: "Kirensk" 
+ HUB_NAME_STATE_IRKUTSK_wood: "Nizhneudinsk" 
+ HUB_NAME_STATE_YAKUTSK_city: "Yakutsk" 
+ HUB_NAME_STATE_YAKUTSK_port: "Tiksi" 
+ HUB_NAME_STATE_YAKUTSK_mine: "Aldan" 
+ HUB_NAME_STATE_YAKUTSK_farm: "Vilyuysk" 
+ HUB_NAME_STATE_YAKUTSK_wood: "Olekminsk" 
+ HUB_NAME_STATE_TRANS_BAIKAL_city: "Chita" 
+ HUB_NAME_STATE_TRANS_BAIKAL_mine: "Shkaruby" 
+ HUB_NAME_STATE_TRANS_BAIKAL_farm: "Aksha" 
+ HUB_NAME_STATE_TRANS_BAIKAL_wood: "Nerchinsk" 
+ HUB_NAME_STATE_OKHOTSK_city: "Magadan" 
+ HUB_NAME_STATE_OKHOTSK_port: "Okhotsk" 
+ HUB_NAME_STATE_OKHOTSK_mine: "Omsukchan" 
+ HUB_NAME_STATE_OKHOTSK_farm: "Chumikan" 
+ HUB_NAME_STATE_OKHOTSK_wood: "Gizhiginsk" 
+ HUB_NAME_STATE_CHUKOTKA_city: "Markovo" 
+ HUB_NAME_STATE_CHUKOTKA_port: "Anadyr" 
+ HUB_NAME_STATE_CHUKOTKA_mine: "Pevek" 
+ HUB_NAME_STATE_CHUKOTKA_farm: "Naukan" 
+ HUB_NAME_STATE_CHUKOTKA_wood: "Provideniya" 
+ HUB_NAME_STATE_KAMCHATKA_city: "Petropavlovsk-Kamchatskiy" 
+ HUB_NAME_STATE_KAMCHATKA_port: "Ust-Kamchatsk" 
+ HUB_NAME_STATE_KAMCHATKA_mine: "Manily" 
+ HUB_NAME_STATE_KAMCHATKA_farm: "Nizhnekamchatsk" 
+ HUB_NAME_STATE_KAMCHATKA_wood: "Milkovo" 
+ HUB_NAME_STATE_BURYATIA_city: "Verkhneudinsk" 
+ HUB_NAME_STATE_BURYATIA_mine: "Tunka" 
+ HUB_NAME_STATE_BURYATIA_farm: "Troitskosavsk" 
+ HUB_NAME_STATE_BURYATIA_wood: "Barguzin" 
+ HUB_NAME_STATE_KOLYMA_city: "Srednekolymsk" 
+ HUB_NAME_STATE_KOLYMA_mine: "Khonuu" 
+ HUB_NAME_STATE_KOLYMA_farm: "Zashiversk" 
+ HUB_NAME_STATE_KOLYMA_wood: "Allakh-Yun" 
  HUB_NAME_STATE_ORYOL_city: "Oryol"
  HUB_NAME_STATE_ORYOL_mine: "Tula"
  HUB_NAME_STATE_ORYOL_farm: "Bryansk"
@@ -994,43 +994,43 @@
  HUB_NAME_STATE_KALMYKIA_wood: "Yashkul"
 
  #Sakhalin
- HUB_NAME_STATE_SAKHALIN_city: "Vladimirovka" #14-11-2023
- HUB_NAME_STATE_SAKHALIN_port: "Korsakov" #14-11-2023
- HUB_NAME_STATE_SAKHALIN_mine: "Tikhmenevsky" #14-11-2023
- HUB_NAME_STATE_SAKHALIN_farm: "Okha" #14-11-2023
- HUB_NAME_STATE_SAKHALIN_wood: "Alexandrovsky" #14-11-2023
+ HUB_NAME_STATE_SAKHALIN_city: "Vladimirovka" 
+ HUB_NAME_STATE_SAKHALIN_port: "Korsakov" 
+ HUB_NAME_STATE_SAKHALIN_mine: "Tikhmenevsky" 
+ HUB_NAME_STATE_SAKHALIN_farm: "Okha" 
+ HUB_NAME_STATE_SAKHALIN_wood: "Alexandrovsky" 
 
  #Caucasus
- HUB_NAME_STATE_DAGESTAN_city: "Petrovsk-Port" #14-11-2023
- HUB_NAME_STATE_DAGESTAN_mine: "Derbent" #14-11-2023
- HUB_NAME_STATE_DAGESTAN_farm: "Temir-Khan-Shura" #14-11-2023
- HUB_NAME_STATE_DAGESTAN_wood: "Kizlyar" #14-11-2023
- HUB_NAME_STATE_KUBAN_port: "Novorossiysk" #14-11-2023
- HUB_NAME_STATE_KUBAN_city: "Yekaterinodar" #14-11-2023
- HUB_NAME_STATE_KUBAN_mine: "Maykop" #14-11-2023
- HUB_NAME_STATE_KUBAN_wood: "Armavir" #14-11-2023
- HUB_NAME_STATE_KUBAN_farm: "Sochi" #14-11-2023
- HUB_NAME_STATE_AZERBAIJAN_city: "Sumqayit" #14-11-2023
- HUB_NAME_STATE_AZERBAIJAN_mine: "Baku" #14-11-2023
- HUB_NAME_STATE_AZERBAIJAN_farm: "Shemakha" #14-11-2023
- HUB_NAME_STATE_AZERBAIJAN_wood: "Quba" #14-11-2023
- HUB_NAME_STATE_ELIZAVETPOL_city: "Elizavetpol" #14-11-2023
- HUB_NAME_STATE_ELIZAVETPOL_mine: "Gazakh" #14-11-2023
- HUB_NAME_STATE_ELIZAVETPOL_farm: "Nukha" #14-11-2023
- HUB_NAME_STATE_ELIZAVETPOL_wood: "Shusha" #14-11-2023
- HUB_NAME_STATE_GREATER_CAUCASUS_city: "Tiflis" #14-11-2023
- HUB_NAME_STATE_GREATER_CAUCASUS_mine: "Bolnisi" #14-11-2023
- HUB_NAME_STATE_GREATER_CAUCASUS_farm: "Sukhum" #14-11-2023
- HUB_NAME_STATE_GREATER_CAUCASUS_wood: "Telavi" #14-11-2023
- HUB_NAME_STATE_GREATER_CAUCASUS_port: "Poti" #14-11-2023
- HUB_NAME_STATE_ARMENIA_city: "Yerevan" #14-11-2023
- HUB_NAME_STATE_ARMENIA_mine: "Nor Bayezet" #14-11-2023
- HUB_NAME_STATE_ARMENIA_farm: "Alexandropol" #14-11-2023
- HUB_NAME_STATE_ARMENIA_wood: "Nakhchivan" #14-11-2023
- HUB_NAME_STATE_NORTH_CAUCASUS_city: "Grozny" #14-11-2023
- HUB_NAME_STATE_NORTH_CAUCASUS_mine: "Vladikavkaz" #14-11-2023
- HUB_NAME_STATE_NORTH_CAUCASUS_farm: "Nalchik" #14-11-2023
- HUB_NAME_STATE_NORTH_CAUCASUS_wood: "Batalpashinskaya" #14-11-2023
+ HUB_NAME_STATE_DAGESTAN_city: "Petrovsk-Port" 
+ HUB_NAME_STATE_DAGESTAN_mine: "Derbent" 
+ HUB_NAME_STATE_DAGESTAN_farm: "Temir-Khan-Shura" 
+ HUB_NAME_STATE_DAGESTAN_wood: "Kizlyar" 
+ HUB_NAME_STATE_KUBAN_port: "Matrega" 
+ HUB_NAME_STATE_KUBAN_city: "Yekaterinodar" 
+ HUB_NAME_STATE_KUBAN_mine: "Maykop" 
+ HUB_NAME_STATE_KUBAN_wood: "Armavir" 
+ HUB_NAME_STATE_KUBAN_farm: "Copa" 
+ HUB_NAME_STATE_AZERBAIJAN_city: "Sumqayit" 
+ HUB_NAME_STATE_AZERBAIJAN_mine: "Baku" 
+ HUB_NAME_STATE_AZERBAIJAN_farm: "Shemakha" 
+ HUB_NAME_STATE_AZERBAIJAN_wood: "Quba" 
+ HUB_NAME_STATE_ELIZAVETPOL_city: "Elizavetpol" 
+ HUB_NAME_STATE_ELIZAVETPOL_mine: "Gazakh" 
+ HUB_NAME_STATE_ELIZAVETPOL_farm: "Nukha" 
+ HUB_NAME_STATE_ELIZAVETPOL_wood: "Shusha" 
+ HUB_NAME_STATE_GREATER_CAUCASUS_city: "Tiflis" 
+ HUB_NAME_STATE_GREATER_CAUCASUS_mine: "Bolnisi" 
+ HUB_NAME_STATE_GREATER_CAUCASUS_farm: "Sukhum" 
+ HUB_NAME_STATE_GREATER_CAUCASUS_wood: "Telavi" 
+ HUB_NAME_STATE_GREATER_CAUCASUS_port: "Poti" 
+ HUB_NAME_STATE_ARMENIA_city: "Yerevan" 
+ HUB_NAME_STATE_ARMENIA_mine: "Nor Bayezet" 
+ HUB_NAME_STATE_ARMENIA_farm: "Alexandropol" 
+ HUB_NAME_STATE_ARMENIA_wood: "Nakhchivan" 
+ HUB_NAME_STATE_NORTH_CAUCASUS_city: "Grozny" 
+ HUB_NAME_STATE_NORTH_CAUCASUS_mine: "Vladikavkaz" 
+ HUB_NAME_STATE_NORTH_CAUCASUS_farm: "Maghas" 
+ HUB_NAME_STATE_NORTH_CAUCASUS_wood: "Batalpashinskaya" 
 
  #Kazakhstan
  HUB_NAME_STATE_SEMIRECHE_city: "Semipalatinsk"
