--- a/localization/english/replace/map/states_l_english.yml
+++ b/localization/english/replace/map/states_l_english.yml
@@ -413,7 +413,7 @@
  STATE_ARMENIA: "Eastern Armenia"
  STATE_AZERBAIJAN: "Baku"
  STATE_GREATER_CAUCASUS: "Sakartvelo"
- STATE_MONTENEGRO: "Montenegro"
+ STATE_MONTENEGRO: "Dioklea"
  STATE_NORTHERN_SERBIA: "Northern Serbia"
  STATE_SOUTHERN_SERBIA: "Southern Serbia"
  STATE_EASTERN_THRACE: "Konstantinople"
