--- a/localization/english/br_events_l_english.yml
+++ b/localization/english/br_events_l_english.yml
@@ -239,6 +239,10 @@
  #personal_union_effect_desc_first: "[TARGET_COUNTRY.GetName] becomes a [COUNTRY.GetAdjectiveNoFlag] Personal Union"
  #personal_union_effect_desc_third: "[AddTextIf(ObjectsEqual(GetMetaPlayer.GetPlayedOrObservedCountry.Self, TARGET_COUNTRY.Self),TARGET_COUNTRY.GetNameNoFlag)][AddTextIf(Not(ObjectsEqual(GetMetaPlayer.GetPlayedOrObservedCountry.Self, TARGET_COUNTRY.Self)),TARGET_COUNTRY.GetName)] is now in a Personal Union under [COUNTRY.GetName]"
 
+ aegyptian_culture.1.t: "Aegyptian"
+ aegyptian_culture.1.d: "Form Aegyptian Culture"
+ aegyptian_culture.1.a: "Form Aegyptian Culture"
+ aegyptian_culture.1.f: "Form Aegyptian Culture"
  
 
 
