--- a/localization/english/br_cultures_l_english.yml
+++ b/localization/english/br_cultures_l_english.yml
@@ -40,7 +40,7 @@
 
  #Jewish Cultures
  romaniote: "Romaniote" #greco-roman jews in the ERE.
- mizrahi: "Musta'Arabi" #Jews in the Arab Persian World.
+ mizrahi: "Musta'Arabi" #Jews in the Arab / Persian World.
 
 #Renamed Currently all renamed cultures do not work unless they are renamed in cultures_1
  #greek:1 "Romaíoi" 
