--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -85,6 +85,8 @@
  br_modifier_new_world_colony: "New World Colony"
  br_modifier_african_colony: "African Colony"
  br_modifier_desert_culture: "Desert Culture"
+ br_modifier_power_bloc_bonus: "Power Bloc Leader Bonus"
+ br_modifier_iberian_resistance: "Iberian Resistance"
 
 
  # Horde
