--- a/localization/english/br_misc_l_english.yml
+++ b/localization/english/br_misc_l_english.yml
@@ -269,3 +269,11 @@
  Commonwealth: "Commonwealth"
 
 
+# 
+ mobilization_option_greekfire: "Greekfire" #aka Liquid Fire
+ mobilization_option_greekfire_desc: " Greek fire, an incendiary weapon, remains shrouded in mystery due to its closely-guarded recipe."
+ mobilization_option_horse_transport: "Horse Transport"
+ mobilization_option_horse_transport_desc: "Order horses to carry your soldiers to the front."
+
+
+
