--- a/localization/english/br_technology_l_english.yml
+++ b/localization/english/br_technology_l_english.yml
@@ -96,3 +96,7 @@
  br_tech_three_deckers_desc: "A type of warship that had three gun decks and was used by European navies in the 17th and 18th centuries. Three-deckers were powerful but slow and difficult to maneuver."
  tech_cavalry_specialization: "Cavalry Diversification"
  tech_cavalry_specialization_desc: "During the 18-19th century, cavalry soldiers underwent significant changes due to advancements in technology and warfare tactics. The widespread use of firearms and artillery posed new challenges for cavalry units. As a result, their role shifted from traditional charges to more flexible and diversified roles."
+
+ #Special tech
+ br_tech_greekfire: "Greekfire" #aka Liquid Fire
+ br_tech_greekfire_desc: "Greek fire, a closely-guarded secret of Basileia Romaion, is a devastating incendiary weapon. At sea, Romaion ships launch projectiles of Greek fire onto enemy vessels, igniting even water. Specialized tubes allowed sailors to spray it directly at foes. On land,  handheld flame-throwing devices project it onto enemies."
