fixes and tweaks
		- toned down a few modifiers
		- added a few new ones
		- Two New Journal Entries for BR related to Syria and Elysium.
		- started changing some permanent modifiers to 50 or 100 years.
		- Fixed the broken occupation map was a result of my attempt to make starting Coat of Arms for Power Blocs so thats on the back burner.
		- Adjusted the AI so militarized nations keep more consripts.
		- removed Hans opium addiction. Mughals are zonked though.
		- Added a decision to add a temporary modifier for for Yuan to make it easier to win the war against ming. AI will not use it.
		- Improved the Romanization Decree.
		- Localisation imoprovements

--- a/localization/english/br_journals_l_english.yml
+++ b/localization/english/br_journals_l_english.yml
@@ -20,7 +20,7 @@
  veiled_exarchate.2.d: "[ROOT.GetCountry.GetName] has secured dominion over [SCOPE.sCountry('africa_country').GetName]. This state of affairs is quickly becoming known as the Veiled Exarchate, for by a technicality Africa remains legally subject to the [SCOPE.sCountry('romaioi_country').GetAdjectiveNoFormatting] [SCOPE.sCharacter('romaioi_ruler').GetPrimaryRoleTitle], who helplessly observes the situation."
  veiled_exarchate.2.f: "Today the Mediterranean was inundated with blood. Those who opposed the new regime were quickly put down. [SCOPE.sCountry('africa_overlord_country').GetAdjectiveNoFormatting] diplomats and politicians have fire in their eyes as they discuss, under the shadow of the Carthago, how they will return civilization to the lands of Africa."
  veiled_exarchate.2.a: "None can deny the power of the [ROOT.GetCountry.GetAdjectiveNoFormatting]."
- veiled_exarchate.2.b: "Assure the new [SCOPE.sCountry('africa_country').GetAdjectiveNoFormatting] [SCOPE.sCharacter('africa_ruler').GetPrimaryRoleTitle] of our support."
+ veiled_exarchate.2.b: "Assure [SCOPE.sCountry('africa_country').GetAdjectiveNoFormatting] has a more loyal [SCOPE.sCharacter('africa_ruler').GetPrimaryRoleTitle] and enforce our will on the region."
 
  je_veiled_exarchate3: "The Katepaníkion of Italia"
  je_veiled_exarchate3_reason: "Our influence in Italia has grown considerably, yet our power in the region is dependent on our relations with the breakaway state. By establishing a Exarchate over the country, our domination would be assured."
@@ -28,7 +28,13 @@
  veiled_exarchate.3.d: "[ROOT.GetCountry.GetName] has secured dominion over [SCOPE.sCountry('italy_country').GetName]. This state of affairs is quickly becoming known as the Veiled Katepaníkion, for by a technicality Italia remains legally subject to the [SCOPE.sCountry('romaioi_country').GetAdjectiveNoFormatting] [SCOPE.sCharacter('romaioi_ruler').GetPrimaryRoleTitle], who helplessly observes the situation."
  veiled_exarchate.3.f: "Today the Mediterranean was inundated with blood. Those who opposed the new regime were quickly put down. [SCOPE.sCountry('italy_overlord_country').GetAdjectiveNoFormatting] diplomats and politicians have fire in their eyes as they discuss, under the shadow of the Naples, how they will return civilization to the lands of Italia."
  veiled_exarchate.3.a: "None can deny the power of the [ROOT.GetCountry.GetAdjectiveNoFormatting]."
- veiled_exarchate.3.b: "Assure the new [SCOPE.sCountry('italy_country').GetAdjectiveNoFormatting] [SCOPE.sCharacter('italy_ruler').GetPrimaryRoleTitle] of our support."
+ veiled_exarchate.3.b: "Assure [SCOPE.sCountry('italy_country').GetAdjectiveNoFormatting] has a more loyal [SCOPE.sCharacter('italy_ruler').GetPrimaryRoleTitle] and enforce our will on the region."
+
+ veiled_exarchate.4.t: "The Exarchate of Syria"
+ veiled_exarchate.4.d: "[ROOT.GetCountry.GetName] has secured dominion over [SCOPE.sCountry('syria_country').GetName]. This state of affairs is quickly becoming known as the Veiled Exarchate, for by a technicality Syria remains legally subject to the [SCOPE.sCountry('romaioi_country').GetAdjectiveNoFormatting] [SCOPE.sCharacter('romaioi_ruler').GetPrimaryRoleTitle], who helplessly observes the situation."
+ veiled_exarchate.4.f: "Today the Mediterranean was inundated with blood. Those who opposed the new regime were quickly put down. [SCOPE.sCountry('syria_overlord_country').GetAdjectiveNoFormatting] diplomats and politicians have fire in their eyes as they discuss, under the shadow of the Antioch, how they will return civilization to the lands of Syria."
+ veiled_exarchate.4.a: "None can deny the power of the [ROOT.GetCountry.GetAdjectiveNoFormatting]."
+ veiled_exarchate.4.b: "Assure [SCOPE.sCountry('syria_country').GetAdjectiveNoFormatting] has a more loyal [SCOPE.sCharacter('syria_ruler').GetPrimaryRoleTitle] and enforce our will on the region."
 
  je_palaiologos_reforms_africa: "Palaiologos Reforms: Reclaim Africa"
  je_palaiologos_reforms_africa_reason: "We should turn our attention to Africa. Rightfully a Romaíon possession, it has fallen into the hands of a usurper."
