--- a/localization/english/br_modifiers_l_english.yml
+++ b/localization/english/br_modifiers_l_english.yml
@@ -86,6 +86,8 @@
  br_modifier_desert_culture: "Desert Culture"
  br_modifier_power_bloc_bonus: "Power Bloc Leader Bonus"
  br_modifier_iberian_resistance: "Iberian Resistance"
+ br_modifier_exarchate: "Exarchate"
+ romaioi_military_reorganization: "Military Reorganization"
 
 
  # Horde
@@ -133,7 +135,8 @@
  autocephalous_patriarchate_elysium_desc: "Autocephalous Patriarchate"
  autocephalous_patriarchate_belgrade: "Autocephalous Patriarchate of Belgrade"
  autocephalous_patriarchate_belgrade_desc: "Autocephalous Patriarchate"
-
+ autocephalous_patriarchate_assyria: "Assyrian Church"
+ autocephalous_patriarchate_assyria_desc: "Assyrian Church"
 
  br_modifier_roman_senate: "Synkletos"
  br_modifier_corrupt_pronoia: "Thematic deterioration"
